# SalesGPT

./: Dockerfile.backend  calendly.py  pyproject.toml  run.py  run_api.py  test_mail.py
.github/workflows/: poetry_unit_tests.yml
examples/: streaming_generator_example.py
frontend/src/components/: chat-interface.tsx
salesgpt/: agents.py  chains.py  custom_invoke.py  logger.py  models.py  parsers.py  prompts.py  salesgptapi.py  stages.py  templates.py  tools.py
tests/: test_api.py  test_salesgpt.py  test_tools.py
tests/test_data/: sample_product_catalog.txt
